force-app/main/default/objects/Exercise_Log__c/Exercise_Log__c.object-meta.xml
<CustomObject>
    <label>Exercise Log</label>
    <nameField>
        <displayFormat>EL-{00000000}</displayFormat>
        <label>Exercise Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exercise Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>