force-app/main/default/objects/Exercise_Log__c/fields/Total_Calories_Burned__c.field-meta.xml
<CustomField>
    <fullName>Total_Calories_Burned__c</fullName>
    <label>Total Calories Burned</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>