force-app/main/default/objects/Exercise_Log__c/fields/Total_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_Minutes__c</fullName>
    <label>Total Minutes</label>
    <summarizedField>Exercise_Log_Item__c.Duration_Minutes__c</summarizedField>
    <summaryForeignKey>Exercise_Log_Item__c.Exercise_Log__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>